# xiaozhi-PhuongAnh-SdCard

./: .gitignore  CODE_CHANGES_SUMMARY.md  HUONG_DAN_SD_AUDIO.md  QUICK_REFERENCE.md  README.md  README_INDEX.md  SD_AUDIO_INTEGRATION_EXAMPLES.cc  SD_AUDIO_SETUP_GUIDE.md  WIFI_WORKFLOW_GUIDE.md  build_output.txt  flash_all.bat  requirements.txt  sdkconfig.defaults  setup.py
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/: CMakeLists.txt  README.md  config.h  convert_opus_to_mp3.py  xiaozhi_ai_iot_vietnam_board_lcd_sdcard.cc
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/audio_opus/: README.md  generate_audio.py
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/audio_opus/control/: ac_off.opus  ac_on.opus  trunk_opened.opus  trunk_opening.opus
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/audio_opus/greetings/: goodbye.opus  greeting_default.opus  greeting_evening.opus  greeting_morning.opus
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/audio_opus/highway/: highway_mode_off.opus  highway_mode_on.opus  speed_100.opus  speed_110.opus  speed_120.opus  speed_60.opus  speed_70.opus  speed_over_limit.opus
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/canbus/: canbus_driver.cc  canbus_driver.h  kia_can_protocol.cc  kia_can_protocol.h  relay_controller.h  vehicle_assistant.cc  vehicle_assistant.h
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/offline/: music_button.h  offline_audio_assets.h  offline_audio_player.h  sd_audio_player.h
main/boards/xiaozhi-ai-iot-vietnam-lcd-sdcard/scripts/: build_audio_assets.py  check_audio_assets.py  flash_audio_assets.py
(+91 files in other folders)
